--- a/web/ours-wiki-client/package.json
+++ b/web/ours-wiki-client/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.13.2",
+    "modern-normalize": "^3.0.1",
     "pinia": "^3.0.4",
     "pinia-plugin-persistedstate": "^4.7.1",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@arco-design/web-vue": "^2.57.0",
